# Generated by Django 5.0.6 on 2024-06-12 20:37

import django.db.models.deletion
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
    ]

    operations = [
        migrations.CreateModel(
            name='Cidade',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('nome', models.CharField(max_length=100)),
            ],
            options={
                'db_table': 'cidade',
            },
        ),
        migrations.CreateModel(
            name='Estado',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('sigla', models.CharField(max_length=2)),
                ('nome', models.CharField(max_length=100)),
            ],
            options={
                'db_table': 'estado',
            },
        ),
        migrations.CreateModel(
            name='Telefone',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('codigoArea', models.CharField(max_length=3)),
                ('numero', models.CharField(max_length=9, unique=True)),
            ],
            options={
                'db_table': 'telefone',
            },
        ),
        migrations.CreateModel(
            name='Endereco',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('logradouro', models.CharField(max_length=255)),
                ('numero', models.PositiveIntegerField()),
                ('complemento', models.CharField(blank=True, max_length=150)),
                ('bairro', models.CharField(max_length=150)),
                ('cep', models.CharField(max_length=8)),
                ('cidade', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='endereco', to='core.cidade')),
            ],
            options={
                'db_table': 'endereco',
            },
        ),
        migrations.AddField(
            model_name='cidade',
            name='estado',
            field=models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='cidade', to='core.estado'),
        ),
        migrations.CreateModel(
            name='Pessoa',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('nome', models.CharField(max_length=255)),
                ('cpf', models.CharField(max_length=11)),
                ('email', models.EmailField(max_length=254)),
                ('sexo', models.IntegerField(choices=[(1, 'Masculino'), (2, 'Feminino')])),
                ('endereco', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='pessoa', to='core.endereco')),
                ('telefone', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='pessoa', to='core.telefone')),
            ],
            options={
                'db_table': 'pessoa',
            },
        ),
    ]
