# Generated by Django 5.0.6 on 2024-06-07 17:55

from django.db import migrations, models


class Migration(migrations.Migration):

    dependencies = [
        ('veiculo', '0001_initial'),
    ]

    operations = [
        migrations.AlterField(
            model_name='veiculo',
            name='tipo',
            field=models.IntegerField(choices=[(1, 'Carro'), (2, 'Caminhão'), (3, 'Picape')]),
        ),
        migrations.AlterModelTable(
            name='fabricante',
            table='Fabricante',
        ),
        migrations.AlterModelTable(
            name='veiculo',
            table='Veiculo',
        ),
    ]
