@startuml
'https://plantuml.com/class-diagram

class Pessoa {
    + nome: CharField
    + cpf: CharField
    + email: EmailField
}

class Funcionario {
    + password: CharField
}

class Cliente {
    + aceitaMarketing: BooleanField
}

enum Sexo {
    + MASCULINO: IntegerField
    + FEMININO: IntegerField
}

class Telefone {
    + codigoArea: CharField
    + numero: CharField
}

class Endereco {
    + logradouro: CharField
    + numero: IntegerField
    + complemento: CharField
    + bairro: CharField
    + cep: CharField
}

class Cidade {
    + nome: CharField
}

class Estado {
    + sigla: CharField
    + nome: CharField
}

class Fabricante {
    + razaoSocial: CharField
    + nomeFantasia: CharField
    + email: EmailFeld
    + cnpj: CharField
}

class Veiculo {
    + modelo: CharField
    + ano: CharField
    + placa: CharField
    + chassi: CharField
}

enum Tipo {
    + CARRO: IntegerField
    + CAMINHAO: IntegerField
    + PICAPE: IntegerField
}

class Servico {
    + nome: CharField
    + descricao: TextField
    + valor: FloatField
}

class OrdemServico {
    + observacao: CharField
    + dataInicio: DateTimeField
    + dataFim: DateTimeField
    + valorTotal: FloatField
}

enum Status {
    + ABERTO: IntegerField
    + EM_ANDAMENTO: IntegerField
    + FINALIZADO: IntegerField
    + CANCELADO: IntegerField
}

OrdemServico -left-> Cliente
OrdemServico --> Funcionario
OrdemServico --> Servico
OrdemServico -up-> Status

Veiculo -up-> Tipo
Veiculo --> Fabricante

Fabricante --> Telefone

Pessoa --> Sexo
Pessoa --> Telefone
Pessoa --> Endereco

Funcionario --> Pessoa

Cliente --> Pessoa
Cliente -left-> Veiculo

Endereco --> Cidade

Cidade "*" o--> "1" Estado

@enduml